--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                 <span class="service-val">${p.major}</span>
                             </div>
                             <div class="service-item">
-                                <span class="service-label">LAD</span>
+                                <span class="service-label">Last Academic Degree</span>
                                 <span class="service-val">${p.lad}</span>
                             </div>
                             <div class="service-item">
@@ -407,3 +407,4 @@
     </script>
 </body>
 </html>
+
